[gd_scene load_steps=13 format=2]

[ext_resource path="res://games/MensaMiniGame/Assets/Images/MainBackground.png" type="Texture" id=1]
[ext_resource path="res://games/MensaMiniGame/Assets/Images/Table.png" type="Texture" id=2]
[ext_resource path="res://games/MensaMiniGame/Assets/Images/TableDown.png" type="Texture" id=3]
[ext_resource path="res://games/MensaMiniGame/Assets/Images/Cook1.png" type="Texture" id=4]
[ext_resource path="res://games/MensaMiniGame/Assets/Scripts/Main.gd" type="Script" id=5]
[ext_resource path="res://games/MensaMiniGame/Assets/Scenes/Menu.tscn" type="PackedScene" id=6]
[ext_resource path="res://games/MensaMiniGame/Assets/Scenes/TutorialButtonMensa.tscn" type="PackedScene" id=7]
[ext_resource path="res://games/MensaMiniGame/Assets/Font/Misc.tres" type="DynamicFont" id=8]
[ext_resource path="res://games/Images/TutorialMensa.png" type="Texture" id=9]
[ext_resource path="res://audios/MensaBackgroundSound.ogg" type="AudioStream" id=10]
[ext_resource path="res://games/MensaMiniGame/Assets/Scenes/StartButtonMensa.tscn" type="PackedScene" id=11]
[ext_resource path="res://audios/GamesTheme.ogg" type="AudioStream" id=12]

[node name="Main" type="Node2D"]
script = ExtResource( 5 )

[node name="StartButton" parent="." instance=ExtResource( 11 )]
position = Vector2( 1190, 460 )
z_index = 2

[node name="TutorialButton" parent="." instance=ExtResource( 7 )]
visible = false
position = Vector2( 1240, 35 )
z_index = 2

[node name="TutorialImage" type="Sprite" parent="."]
visible = false
position = Vector2( 640, 360 )
z_index = 1
texture = ExtResource( 9 )

[node name="GameStartButton" type="Button" parent="TutorialImage"]
visible = false
margin_left = 100.0
margin_top = 300.0
margin_right = 278.0
margin_bottom = 338.0
custom_fonts/font = ExtResource( 8 )
text = "Spiel starten"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainBackground" type="Sprite" parent="."]
position = Vector2( 640, 361 )
texture = ExtResource( 1 )

[node name="Chef" type="Sprite" parent="."]
position = Vector2( 1136.66, 244.311 )
scale = Vector2( 0.0710003, 0.0710004 )
texture = ExtResource( 4 )

[node name="Table" type="Sprite" parent="."]
position = Vector2( 640, 500 )
scale = Vector2( 19, 2.25 )
texture = ExtResource( 2 )

[node name="TableDown" type="Sprite" parent="."]
position = Vector2( 640, 660 )
scale = Vector2( 10.5, 1 )
texture = ExtResource( 3 )

[node name="Menu" parent="." instance=ExtResource( 6 )]

[node name="Button" type="Button" parent="."]
margin_left = 7.0
margin_top = 695.0
margin_right = 95.0
margin_bottom = 715.0
text = "Game Done"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="BackgroundNoise" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -15.0
autoplay = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -30.0
autoplay = true

[connection signal="pressed" from="TutorialImage/GameStartButton" to="." method="_on_GameStartButton_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="finished" from="BackgroundNoise" to="." method="_on_BackgroundNoise_finished"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
